# SA-UnitTestHelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SA-UnitTestHelper.hpp  UnitTestHelper.hpp  _unit_test_helper_8hpp.html  _unit_test_helper_8hpp_source.html  doxygen.config  files.html  globals.html  globals_defs.html  index.html  menudata.js  namespace_sa_1_1_u_t_h.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_vars.html  namespaces.html
.github/workflows/: sa_ctest.yml  sa_doxygen.yml
Examples/: CMakeLists.txt  DeployAndTest.bat  DeployAndTest.sh
Examples/Callback/: CMakeLists.txt  main_callback.cpp
Examples/Callbacks/: CMakeLists.txt  main_callbacks.cpp
Examples/Failure/: CMakeLists.txt  main_failure.cpp
Examples/Group/: CMakeLists.txt  main_group.cpp
Examples/Groups/: CMakeLists.txt  main_groups.cpp
Examples/MacroEquals/: CMakeLists.txt  main_macro_equals.cpp
Examples/MacroMFunc/: CMakeLists.txt  main_macro_mfunc.cpp
Examples/MacroOp/: CMakeLists.txt  main_macro_op.cpp
Examples/MacroSFunc/: CMakeLists.txt  main_macro_sfunc.cpp
Examples/Success/: CMakeLists.txt  main_success.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
